fix(toggle-button-group): fixed gallery alignment, moved stories stuck in deprecated LESS folder

--- a/src/sass/toggle-button-group/toggle-button-group.scss
+++ b/src/sass/toggle-button-group/toggle-button-group.scss
@@ -95,6 +95,10 @@
     align-self: flex-start;
 }
 
+.toggle-button-group--gallery-layout .toggle-button {
+    justify-content: flex-start;
+}
+
 .toggle-button-group--gallery-layout .toggle-button__image,
 .toggle-button-group--gallery-layout .toggle-button__icon {
     margin-bottom: 0;
